# TerAI

./: .gitignore  CMakeLists.txt  INTEGRATION_LOCAL_LLAMA.md  README.md  install.sh  test_local_llama
cmake/: termux-arm64.cmake
include/core/: agent.h  config.h  display.h  memory.h  optimizer.h  setup.h  types.h
include/daemon/: background.h
include/providers/: anthropic.h  base_provider.h  gemini.h  http_client.h  local_llama.h  ollama.h  openai_compat.h  provider_factory.h
include/tools/: filesystem.h  tool_registry.h  web_search.h
src/: main.cpp
src/core/: agent.cpp  config.cpp  display.cpp  memory.cpp  optimizer.cpp  setup.cpp
src/daemon/: background.cpp
src/providers/: anthropic.cpp  gemini.cpp  http_client.cpp  local_llama.cpp  ollama.cpp  openai_compat.cpp  provider_factory.cpp
src/tools/: filesystem.cpp  tool_registry.cpp  web_search.cpp
tests/: llama_stub_for_testing.cpp  test_local_llama.cpp
